--- a/portfolio.html
+++ b/portfolio.html
@@ -4,12 +4,21 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link rel="preconnect" href="https://fonts.googleapis.com">
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">  
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+			integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<title>Портфоліо</title>
 		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
@@ -17,7 +26,10 @@
 		<header class="header">
 			<div class="container">
 				<nav class="nav">
-					<a class="logo" href="/"><span class="accent">Web</span>Studio</a>
+					<a class="logo" href="/">
+						<span class="accent">Web</span>
+						Studio
+					</a>
 					<ul class="list">
 						<li><a class="link" href="./index.html">Студія</a></li>
 						<li><a class="link current" href="./">Портфоліо</a></li>
@@ -33,7 +45,7 @@
 		<main>
 			<section class="portfolio section">
 				<h1 class="section-title visually-hidden">Портфоліо</h1>
-				<div class="container">	
+				<div class="container">
 					<ul class="list">
 						<li>
 							<button class="button" type="button">Усі</button>
@@ -50,7 +62,7 @@
 						<li>
 							<button class="button" type="button">Маркетинг</button>
 						</li>
-					</ul>			
+					</ul>
 					<ul class="list">
 						<li class="item">
 							<a class="link" href="">
@@ -58,16 +70,20 @@
 								<div class="text">
 									<h2 class="title">Технокряк</h2>
 									<p>Веб-сайт</p>
-								</div>								
+								</div>
 							</a>
 						</li>
 						<li class="item">
 							<a class="link" href="">
-								<img src="./images/neworleans.jpg" alt="Постер New Orlean vs Golden Star" width="370" />
+								<img
+									src="./images/neworleans.jpg"
+									alt="Постер New Orlean vs Golden Star"
+									width="370"
+								/>
 								<div class="text">
 									<h2 class="title">Постер New Orlean vs Golden Star</h2>
 									<p>Дизайн</p>
-								</div>								
+								</div>
 							</a>
 						</li>
 						<li class="item">
@@ -99,7 +115,11 @@
 						</li>
 						<li class="item">
 							<a class="link" href="">
-								<img src="./images/inspirationhas.jpg" alt="Inspiration has no Borders" width="370" />
+								<img
+									src="./images/inspirationhas.jpg"
+									alt="Inspiration has no Borders"
+									width="370"
+								/>
 								<div class="text">
 									<h2 class="title">Inspiration has no Borders</h2>
 									<p>Веб-сайт</p>
@@ -139,11 +159,15 @@
 		</main>
 		<footer class="footer">
 			<div class="container">
-				<a class="logo" href="/"><span class="accent">Web</span>Studio</a>
+				<a class="logo" href="/">
+					<span class="accent">Web</span>
+					Studio
+				</a>
 				<address class="address">
 					<ul class="list">
 						<li class="street">
-							<a class="link"
+							<a
+								class="link"
 								href="https://goo.gl/maps/CPtrU1FHBa2aNyZL9"
 								target="_blank"
 								rel="noopener noreferrer"
@@ -161,4 +185,3 @@
 		</footer>
 	</body>
 </html>
-
