--- a/index.html
+++ b/index.html
@@ -94,18 +94,24 @@
 					<ul class="list">
 						<li class="item">
 							<img class="img" src="./images/demyanenko.jpg" alt="Ігор Дем'яненко" width="270" />
-							<h3 class="title">Ігор Дем'яненко</h3>
-							<p>Product Designer</p>
+							<div class="text">
+								<h3 class="title">Ігор Дем'яненко</h3>
+								<p>Product Designer</p>
+							</div>
 						</li>
 						<li class="item">
 							<img class="img" src="./images/repina.jpg" alt="Ольга Рєпіна" width="270" />
-							<h3 class="title">Ольга Рєпіна</h3>
-							<p>Frontend Developer</p>
+							<div class="text">
+								<h3 class="title">Ольга Рєпіна</h3>
+								<p>Frontend Developer</p>
+							</div>
 						</li>
 						<li class="item">
 							<img class="img" src="./images/tarasov.jpg" alt="Микола Тарасов" width="270" />
-							<h3 class="title">Микола Тарасов</h3>
-							<p>Marketing</p>
+							<div class="text">
+								<h3 class="title">Микола Тарасов</h3>
+								<p>Marketing</p>
+							</div>
 						</li>
 						<li class="item">
 							<img class="img" src="./images/ermakov.jpg" alt="Михайло Єрмаков" width="270" />
