Adds div to .team .item

--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
 						</li>
 						<li class="item">
 							<img class="img" src="./images/ermakov.jpg" alt="Михайло Єрмаков" width="270" />
-							<h3 class="title">Михайло Єрмаков</h3>
-							<p>UI Designer</p>
+							<div class="text">
+								<h3 class="title">Михайло Єрмаков</h3>
+								<p>UI Designer</p>
+							</div>
 						</li>
 					</ul>
 				</div>
